--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,8 +30,8 @@
                         <span class="link">Cadastre-se</span>
                     </p>
                 </div>
-                <div class="app">
-                    <p class="get-app">Baixe o aplicativo</p>
+                <div class="get-app">
+                    <p class="app">Baixe o aplicativo</p>
                     <div class="baixarapp">
                         <a href="#" class="baixar"></a>
                         <a href="#" class="baixar"></a>
